src/bootstrap/test/v0_13/rejects/06_platform_suffix_collision_macos/main.zg
import "dup"

print dup.value()
